--- a/style.css
+++ b/style.css
@@ -1,5 +1,91 @@
-div {
-display:block;
-margin: auto;
+.header{
+  float:right;
+  font-family:arial;
+  right: 10px;
+}
+
+.header a{
+  color:black;
+  font-size:13px;
     
+}
+    
+.main {
+  text-align:center;
+  width:100%;
+  height:auto;
+  padding-top:30px;
+  margin:0 auto;
+}
+
+.logo {
+background:url(/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png);
+}
+input {
+width:600px;
+  height:30px;
+  margin-bottom:15px;
+}
+
+a{
+  text-decoration:none;
+}
+
+
+.footer a{
+  color:#757575;
+  padding:5px;
+  font-size:10pt;
+}
+
+.footer {
+  background:#f2f2f2;
+  font-family:arial;
+  font-color:#757575;
+  padding:17px;
+  bottom:0;
+  position:fixed;
+  width:100%;
+  left:-5px;
+}
+.footer:after {
+  display:block;
+  clear:both;
+  content: "";
+  height:0;
+  overflow:hidden;
+}
+
+.footer-gauche{
+  float:left;
+}
+.footer-droit{
+  float:right;
+}
+
+.google-logo {
+  width:300px;
+}
+
+.buttons {
+  margin-bottom:60px;
+}
+button {
+  background-color:#f2f2f2;
+  border:none;
+  padding:10px;
+  margin:10px;
+  color:#757575;
+  font-size:10pt;
+  font-weight:bold;
+  font-family:arial;
+  border-radius: 2px;
+}
+
+a:hover {
+  text-decoration:underline;
+}
+button:hover {
+  color:black;
+  border:1px solid #D9D9D9;
 }
